[#272] Minor changes to make the backport work.